results/SVCOMP/4-shot/log-ExException-2024_03_18_16_25_21.txt
public class ExException {
  //@ ensures \result == 0;
  int zero() {
    return 0;
  }

  //@ requires secret > 0;
  //@ ensures \result == 0;
  static int test(int secret) {
    Main o = null;
    if (secret > 0) {
      o = new Main();
    } else assert false;
    int i = o.zero();
    return i;
  }
}
/home/max/Documents/JMLGPT/tmp/ExException.java:10: error: cannot find symbol
    Main o = null;
    ^
  symbol:   class Main
  location: class ExException
/home/max/Documents/JMLGPT/tmp/ExException.java:12: error: cannot find symbol
      o = new Main();
              ^
  symbol:   class Main
  location: class ExException
2 errors

